@@ -1,6 +1,12 @@
 import time
 
 def secondsToDuration(input):
+	"""Formats the seconds to a duration string as used by XBMC.
+
+	Keyword arguments:
+	input -- the duration in seconds
+
+	"""
 	hours = input / 3600
 	minutes = (input % 3600) / 60
 	seconds = (input % 3600) % 60 
